translation-tool/inputs/source_meta/objects/HSvc_AccTrxnReason__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_AccountTransactionCode__c</fullName>
        <label>Account Transaction</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_AccountTransactionCodeMaster__c.HSvc_ActiveFormula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_AccountTransactionCodeMaster__c</referenceTo>
        <relationshipLabel>Account Transaction Reasons</relationshipLabel>
        <relationshipName>Account_Transaction_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <formula>AND(
  HSvc_Expiry_Date__c &gt;= TODAY(),
  HSvc_Effective_Date__c &lt;= TODAY()

)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AllowStartEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Start End Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AvailableOnSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available On Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_BillingReasonCode__c</fullName>
        <label>Billing Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CheckAccountDelinquency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the system will make a callout to billing to check the account status. If the account is delinquent, the account transaction is not saved</description>
        <label>Check Account Delinquency</label>
        <type>Checkbox</type>
    </fields> 
    <fields>
        <fullName>HSvc_CreateFollowOnTransaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Follow On Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_FollowOnReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow On Reason</label>
        <referenceTo>HSvc_AccTrxnReason__c</referenceTo>
        <relationshipLabel>Account Transaction Reasons</relationshipLabel>
        <relationshipName>Account_Transaction_Reasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason__c</fullName>
        <externalId>true</externalId>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ApplicableForCountry__c</fullName>
        <label>Applicable For Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                    <label>Colombia</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <label>Panama</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <label>Peru</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>Ecuador</label>
                </value>
                <value>
                    <fullName>CL</fullName>
                    <label>Chile</label>
                </value>
				<value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_MinNoOfDaysForStartDate__c</fullName>
        <description>Captures the number of days that the start date for such kind of transaction is set in future</description>
        <label>Minimum No Of Days For Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_ReasonPanama__c</fullName>
        <label>Reason(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_RequireAssetUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if the transaction status needs asset update to change to &quot;completed&quot;.</description>
        <label>RequireAssetUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Retention_Fee__c</fullName>
        <description>It will store the default value for a particular Reason.</description>
        <label>Reconnection Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>Hsvc_Retention_Rounding__c</fullName>
        <description>Rounding Logic for Retention fee</description>
        <label>Retention Rounding Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntegrationEndpointConfigName__c</fullName>
        <label>Integration Endpoint Config Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Formula__c</fullName>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(Reason_Spanish__c ), HSvc_Reason__c ,Reason_Spanish__c) ,&apos;es_PA&apos;, IF(ISBLANK(Hsvc_ReasonPanama__c ), HSvc_Reason__c ,Hsvc_ReasonPanama__c) ,&apos;es_PE&apos;, IF(ISBLANK(Reason_esPE__c ), HSvc_Reason__c ,Reason_esPE__c) ,&apos;es_EC&apos;, IF(ISBLANK(Reason_esEC__c ), HSvc_Reason__c ,Reason_esEC__c) ,&apos;es_CL&apos;, IF(ISBLANK(Reason_esCL__c ), HSvc_Reason__c ,Reason_esCL__c) , &apos;es_AR&apos;, IF(ISBLANK(Reason_esAR__c ), HSvc_Reason__c ,Reason_esAR__c) ,HSvc_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Portuguese__c</fullName>
        <description>This field stores the Account Transaction in Portuguese</description>
        <label>Reason (Portuguese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Spanish__c</fullName>
        <label>Reason(Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Reason_esAR__c</fullName>
        <label>Reason(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_esCL__c</fullName>
        <label>Reason(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_esEC__c</fullName>
        <label>Reason(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_esPE__c</fullName>
        <label>Reason(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Codes_Not_Applicable__c</fullName>
        <label>Status Reason Codes Not Applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A01</fullName>
                    <isActive>false</isActive>
                    <label>A01 - Reactivated account</label>
                </value>
                <value>
                    <fullName>A02</fullName>
                    <isActive>false</isActive>
                    <label>A02</label>
                </value>
                <value>
                    <fullName>A03</fullName>
                    <isActive>false</isActive>
                    <label>A03</label>
                </value>
                <value>
                    <fullName>A04</fullName>
                    <isActive>false</isActive>
                    <label>A04</label>
                </value>
                <value>
                    <fullName>A05</fullName>
                    <isActive>false</isActive>
                    <label>A05</label>
                </value>
                <value>
                    <fullName>A06</fullName>
                    <isActive>false</isActive>
                    <label>A06</label>
                </value>
                <value>
                    <fullName>A07</fullName>
                    <isActive>false</isActive>
                    <label>A07</label>
                </value>
                <value>
                    <fullName>A08</fullName>
                    <isActive>false</isActive>
                    <label>A08 - Billing Unlock Reactivation</label>
                </value>
                <value>
                    <fullName>A100</fullName>
                    <isActive>false</isActive>
                    <label>A100</label>
                </value>
                <value>
                    <fullName>A10</fullName>
                    <isActive>false</isActive>
                    <label>A10 - Service Account Activation</label>
                </value>
                <value>
                    <fullName>A152</fullName>
                    <isActive>false</isActive>
                    <label>A152</label>
                </value>
                <value>
                    <fullName>C01</fullName>
                    <isActive>false</isActive>
                    <label>C01</label>
                </value>
                <value>
                    <fullName>C02</fullName>
                    <isActive>false</isActive>
                    <label>C02</label>
                </value>
                <value>
                    <fullName>C03</fullName>
                    <isActive>false</isActive>
                    <label>C03</label>
                </value>
                <value>
                    <fullName>C04</fullName>
                    <isActive>false</isActive>
                    <label>C04</label>
                </value>
                <value>
                    <fullName>C05</fullName>
                    <isActive>false</isActive>
                    <label>C05</label>
                </value>
                <value>
                    <fullName>C06</fullName>
                    <isActive>false</isActive>
                    <label>C06</label>
                </value>
                <value>
                    <fullName>C07</fullName>
                    <isActive>false</isActive>
                    <label>C07</label>
                </value>
                <value>
                    <fullName>C08</fullName>
                    <isActive>false</isActive>
                    <label>C08</label>
                </value>
                <value>
                    <fullName>C09</fullName>
                    <isActive>false</isActive>
                    <label>C09 - Canceled: 09 No Reason Given</label>
                </value>
                <value>
                    <fullName>C10</fullName>
                    <isActive>false</isActive>
                    <label>C10</label>
                </value>
                <value>
                    <fullName>C11</fullName>
                    <isActive>false</isActive>
                    <label>C11</label>
                </value>
                <value>
                    <fullName>C12</fullName>
                    <isActive>false</isActive>
                    <label>C12</label>
                </value>
                <value>
                    <fullName>C13</fullName>
                    <isActive>false</isActive>
                    <label>C13</label>
                </value>
                <value>
                    <fullName>C14</fullName>
                    <isActive>false</isActive>
                    <label>C14 - Canceled: Ku to Ka Upgrade On Same SAN</label>
                </value>
                <value>
                    <fullName>C15</fullName>
                    <isActive>false</isActive>
                    <label>C15</label>
                </value>
                <value>
                    <fullName>C150</fullName>
                    <isActive>false</isActive>
                    <label>C150</label>
                </value>
                <value>
                    <fullName>C151</fullName>
                    <isActive>false</isActive>
                    <label>C151</label>
                </value>
                <value>
                    <fullName>C16</fullName>
                    <isActive>false</isActive>
                    <label>C16</label>
                </value>
                <value>
                    <fullName>C17</fullName>
                    <isActive>false</isActive>
                    <label>C17</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Transaction Reason</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reason_Formula__c</columns>
        <columns>HSvc_AccountTransactionCode__c</columns>
        <columns>IntegrationEndpointConfigName__c</columns>
        <columns>HSvc_CreateFollowOnTransaction__c</columns>
        <columns>HSvc_FollowOnReason__c</columns>
        <columns>Status_Reason_Codes_Not_Applicable__c</columns>
        <columns>HSvc_BillingReasonCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATR-{0000}</displayFormat>
        <label>Account Transaction Reason</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Transaction Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_Expiry_Date__c &lt; TODAY(), HSvc_Expiry_Date__c&lt; HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>